[package]
name = "rust-yespower"
version = "0.1.1"
authors = ["Yar <idquantum@gmail.com>", "Ayrzo <ayrzo@lurito.cn>"]
edition = "2021"
description = "Generate yespower PoW hashs."
license = "MIT"
readme = "README.md"
repository = "https://github.com/Lurito/rust-yespower"
keywords = ["yespower", "tidecoin"]

[dependencies]
libc = "0.2"
hex = "0.4.3"

[build-dependencies]
bindgen = "0.68"
cc = "1.0"
