[package]
name = "rust-yespower"
version = "0.2.0"
authors = ["Ayrzo <ayrzo@lurito.cn>", "Yar <idquantum@gmail.com>"]
edition = "2021"
description = "Generate yespower PoW hashs."
license = "MIT"
readme = "README.md"
repository = "https://github.com/Lurito/rust-yespower"
keywords = ["yespower", "tidecoin", "power2b"]

[lib]

[dependencies]
libc = "0.2"
hex = "0.4.3"

[build-dependencies]
bindgen = "0.68"
cc = "1.0"
