[package]
name = "yespower"
version = "0.2.1"
authors = ["Ayrzo <ayrzo@lurito.cn>", "Yar <idquantum@gmail.com>"]
edition = "2021"
description = "Generate yespower PoW hashs."
license = "MIT"
readme = "README.md"
repository = "https://github.com/Lurito/yespower"
keywords = ["yespower", "tidecoin", "power2b"]
publish = true

[lib]

[dependencies]
libc = "0.2"
hex = "0.4.3"

[build-dependencies]
bindgen = "0.68"
cc = "1.0"
